[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claw-log-sh"
version = "1.0.1"
description = "Automated Career Log using generative AI and Git diffs (fork of claw-log, original by Kim Woohyuck)"
readme = "README.md"
authors = [
    {name = "sanghyun-io", email = "62102969+sanghyun-io@users.noreply.github.com"},
]
maintainers = [
    {name = "Kim Woohyuck (original author)", email = "kimwoohyuck@example.com"},
]
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
requires-python = ">=3.7"
dependencies = [
    "google-genai>=0.3.0",
    "openai",
    "python-dotenv",
    "questionary>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/sanghyun-io/claw-log"
Repository = "https://github.com/sanghyun-io/claw-log"
"Original (upstream)" = "https://github.com/WooHyucks/claw-log"

[project.scripts]
claw-log = "claw_log.main:main"
claw-log-sh = "claw_log.main:main"

[tool.setuptools]
packages = ["claw_log"]
package-dir = {"claw_log" = "."}